[gd_scene load_steps=14 format=3 uid="uid://bm3pdbl7cdihx"]

[ext_resource type="Texture2D" uid="uid://cbwadtab2hml5" path="res://assets/01_Flat_Theme/Sprites/UI_Flat_Bar11a.png" id="1_wfv5k"]
[ext_resource type="Script" path="res://scenes/UI element/settings/settings.gd" id="1_x4akh"]
[ext_resource type="Texture2D" uid="uid://pi228l7500kb" path="res://assets/01_Flat_Theme/Sprites/UI_Flat_Handle06a.png" id="2_0r6pq"]
[ext_resource type="PackedScene" uid="uid://bj6dstrcm0yks" path="res://scenes/map/background.tscn" id="2_amd81"]
[ext_resource type="AudioStream" uid="uid://b55xtmvwkoslc" path="res://assets/sounds/jump.wav" id="2_sfmun"]
[ext_resource type="PackedScene" uid="uid://43sc3jjy8c20" path="res://scenes/UI element/button/Button.tscn" id="3_k4i5o"]
[ext_resource type="Texture2D" uid="uid://bsm81frtrj8j2" path="res://assets/01_Flat_Theme/Style 1 Symbols (39).png" id="4_1srpo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a4s0a"]
texture = ExtResource("1_wfv5k")
texture_margin_left = 3.0
texture_margin_top = 4.0
texture_margin_right = 3.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hwgn5"]
texture = ExtResource("2_0r6pq")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pb1hq"]
texture = ExtResource("1_wfv5k")
texture_margin_left = 3.0
texture_margin_top = 4.0
texture_margin_right = 3.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oa3l6"]
texture = ExtResource("2_0r6pq")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f732f"]
texture = ExtResource("1_wfv5k")
texture_margin_left = 3.0
texture_margin_top = 4.0
texture_margin_right = 3.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_esdug"]
texture = ExtResource("2_0r6pq")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0

[node name="Settings" type="CanvasLayer"]
layer = 2
script = ExtResource("1_x4akh")

[node name="Background" parent="." instance=ExtResource("2_amd81")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1155.0
offset_bottom = 644.0
color = Color(0.00392157, 0.00392157, 0.00392157, 0.278431)

[node name="sfx sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_sfmun")
bus = &"SFX"

[node name="back button" parent="sfx sound" instance=ExtResource("3_k4i5o")]
unique_name_in_owner = true
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 14.0
offset_top = 22.0
offset_right = 88.0
offset_bottom = 70.0
grow_horizontal = 1
grow_vertical = 1
icon = ExtResource("4_1srpo")
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.5
offset_top = -20.0
offset_right = 322.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Master Volume" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="v_master" type="HSlider" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxTexture_a4s0a")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_hwgn5")
max_value = 1.0
step = 0.001

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Music Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="v_music" type="HSlider" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxTexture_pb1hq")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_oa3l6")
max_value = 1.0
step = 0.001

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Sound Effect" type="Label" parent="VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Sound Effect Volume"
horizontal_alignment = 1

[node name="v_sfx" type="HSlider" parent="VBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxTexture_f732f")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_esdug")
max_value = 1.0
step = 0.001

[connection signal="pressed" from="sfx sound/back button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/v_master" to="." method="_on_v_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/v_music" to="." method="_on_v_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer3/v_sfx" to="." method="_on_v_sfx_value_changed"]
